# Rimuru

./: .gitignore  Cargo.toml
src/: db.rs  gateway.rs  handler.rs  main.rs  models.rs  rest.rs
src/antinuke/: assets.rs  channels.rs  mod.rs  moderation.rs  roles.rs  server.rs
src/commands/: fun.rs  general.rs  mod.rs
src/commands/moderation/: basic.rs  channels.rs  mod.rs  purge.rs  roles_lists.rs  system.rs
src/commands/security/: admin.rs  antinuke.rs  mod.rs  whitelist.rs
src/constants/: colors.rs  emojis.rs  mod.rs
