[package]
name = "rimuru-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

# Raw WebSocket — this IS the Discord gateway
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Future stream utilities (SinkExt, StreamExt — needed to split the WS stream)
futures-util = "0.3"

# Raw HTTP — this IS the Discord REST API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON (de)serialization — we parse Discord payloads ourselves
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"

# Ergonomic error handling
anyhow = "1"

# Database for whitelists & config
rusqlite = { version = "0.31", features = ["bundled"] }

# Timestamps & Date handling
chrono = "0.4"

# Env vars and logging
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RNG (for fun commands)
rand = "0.8"
